--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background: $white;
+  background: $white;
   font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
@@ -30,8 +30,13 @@ body {
   width: 100%;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: $helveticaNeue;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: $helvetica;
   color: $darkerGray;
   font-weight: bold;
 
@@ -71,38 +76,45 @@ p {
 a {
   color: $blue;
   text-decoration: none;
-	cursor: pointer;
-  &:hover, &:active {
+  cursor: pointer;
+  &:hover,
+  &:active {
     color: $blue;
   }
 }
 
-ul, ol {
+ul,
+ol {
   margin: 15px 0;
-  padding-left: 30px;
 }
 
 ul {
-  list-style-type: disc;
+  list-style-type: none;
 }
 
 ol {
   list-style-type: decimal;
 }
 
-ol ul, ul ol, ul ul, ol ol {
+ol ul,
+ul ol,
+ul ul,
+ol ol {
   margin: 0;
 }
 
-ul ul, ol ul {
+ul ul,
+ol ul {
   list-style-type: circle;
 }
 
-em, i {
+em,
+i {
   font-style: italic;
 }
 
-strong, b {
+strong,
+b {
   font-weight: bold;
 }
 
@@ -134,12 +146,12 @@ img {
 // http://nicolasgallagher.com/micro-clearfix-hack/
 .clearfix:before,
 .clearfix:after {
-    content: " ";
-    display: table;
+  content: " ";
+  display: table;
 }
 
 .clearfix:after {
-    clear: both;
+  clear: both;
 }
 
 /*********************/
@@ -155,12 +167,11 @@ img {
 }
 
 .masthead {
+  text-align: center;
+  letter-spacing: 2px;
   padding: 20px 0;
   border-bottom: 1px solid $lightGray;
-
-  @include mobile {
-    text-align: center;
-  }
+  font-family: $helvetica;
 }
 
 .site-avatar {
@@ -181,8 +192,6 @@ img {
 }
 
 .site-info {
-  float: left;
-
   @include mobile {
     float: none;
     display: block;
@@ -192,12 +201,10 @@ img {
 
 .site-name {
   margin: 0;
-  color: $darkGray;
+  color: $black;
   cursor: pointer;
-  font-family: $helveticaNeue;
-  font-weight: 300;
-  font-size: 28px;
-  letter-spacing: 1px;
+  font-weight: 700;
+  font-size: 42px;
 }
 
 .site-description {
@@ -211,9 +218,8 @@ img {
 }
 
 nav {
-  float: right;
   margin-top: 23px; // @TODO: Vertically middle align
-  font-family: $helveticaNeue;
+  font-family: $helvetica;
   font-size: 18px;
 
   @include mobile {
@@ -224,7 +230,6 @@ nav {
   }
 
   a {
-    margin-left: 20px;
     color: $darkGray;
     text-align: right;
     font-weight: 300;
@@ -235,6 +240,15 @@ nav {
       color: $blue;
     }
   }
+}
+
+.nav-links li {
+  text-transform: uppercase;
+  display: inline;
+  padding: 1em;
+  text-align: center;
+  font-size: 13px;
+  line-height: 1.5em;
 }
 
 //
@@ -253,7 +267,7 @@ nav {
 
 .post {
   blockquote {
-    margin: 1.8em .8em;
+    margin: 1.8em 0.8em;
     border-left: 2px solid $gray;
     padding: 0.1em 1em;
     color: $gray;
