wire up email form formspree

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -11,8 +11,11 @@ $darkerGray: #222;
 $darkGray: #333;
 $gray: #666;
 $lightGray: #a8a8a8;
+$lighterGray: #ccc;
 $white: #fff;
-
+$red: salmon;
+$blue: #2185d0;
+$green: #00ab66;
 // Font stacks
 $helvetica: Helvetica, Arial, sans-serif;
 $helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
