--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
               <a href="{{ site.baseurl }}/">Home</a>
             </li>
             <li {% if page.url == "/contact" %}class="current" {% endif %}>
-              <a href="{{ site.baseurl }}/contacts">Contact</a>
+              <a href="{{ site.baseurl }}/contact">Contact</a>
             </li>
             <li {% if page.url == "/about" %}class="current" {% endif %}>
               <a href="{{ site.baseurl }}/about">About</a>
