--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,7 @@
 <html>
   <head>
     <title>
-      {% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} –
-      {{ site.description }}
+      {{ site.name }} - {% if page.title %}{{ page.title }} {% endif %}
     </title>
 
     {% include meta.html %}
