--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>
-      {{ site.name }} - {% if page.title %}{{ page.title }} {% endif %}
+      {{ site.name }}{% if page.title %} - {{ page.title }} {% endif %}
     </title>
 
     {% include meta.html %}
