--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,12 @@ layout: default
 ---
 
 <article class="post">
-  <h1>{{ page.title }}</h1>
+  <div class="post-header">
+    <h1>
+      <a href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a>
+    </h1>
+    <div class="date">{{ page.date | date: "%B %e, %Y" }}</div>
+  </div>
   <div class="entry">
     {{ content }}
   </div>
