fix-nav-link-mobile-style

--- a/style.scss
+++ b/style.scss
@@ -290,6 +290,12 @@ nav {
     font-weight: 400;
   }
 
+  ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+
   li {
     text-transform: uppercase;
     display: inline;
