--- a/style.scss
+++ b/style.scss
@@ -26,7 +26,7 @@ body {
 .container {
   margin: 0 auto;
   max-width: 740px;
-  padding: 0 10px;
+  padding: 0 20px;
   width: 100%;
 }
 
@@ -348,7 +348,7 @@ nav {
 }
 
 .wrapper-about section {
-  padding: 20px 0;
+  padding: 20px 0px;
   h2 {
     text-align: center;
   }
@@ -373,13 +373,12 @@ nav {
 }
 
 #profile-image {
-  width: 25%;
-  height: 25%;
-  margin-right: 7%;
-  border-radius: 20%;
+  width: 20%;
+  margin-right: 5%;
+  border-radius: 8px;
 
   @include mobile {
-    width: 15%;
+    display: none;
   }
 }
 
